--- a/index.html
+++ b/index.html
@@ -245,21 +245,7 @@
                             <p class="periodo">Jul/2025</p>
                             <h3 class="titulo">Projeto Cordel</h3>
                             <p>Projeto construído para treinar o efeito Parallax em imagens.</p>
-
-                            <details class="descricao">
-                                <summary>Saiba mais...</summary>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi quae architecto a eaque rem porro id magnam iure sed totam dolore atque reiciendis, eum, voluptatum fugiat ipsum in ex provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia porro sunt odio accusamus. Sapiente illum quaerat, eos veniam non pariatur repellendus id sed in voluptatum consequuntur sit vero at atque!</p>
-                            </details>
-                        </div>
-                    </div>
-
-                    <div class="projeto"> <!-- Projeto 2 -->
-                        <img src="imagens/projeto-03-android.jpg" alt="Projeto 2 - Android" class="foto">
-
-                        <div class="projeto-info">
-                            <p class="periodo">Out/2025</p>
-                            <h3 class="titulo">Projeto Android</h3>
-                            <p>Projeto construído para treinar conteúdos e imagens dinâmicas.</p>
+                            <a href="https://luizgbritoe.github.io/projeto-cordel/">Clique aqui para acessar o projeto</a>
 
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
@@ -269,12 +255,13 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 3 -->
-                        <img src="imagens/projeto-04-links.jpg" alt="Projeto 3 - Redes Sociais" class="foto">
+                        <img src="imagens/projeto-03-android.jpg" alt="Projeto 3 - Android" class="foto">
 
                         <div class="projeto-info">
-                            <p class="periodo">Set/2025</p>
-                            <h3 class="titulo">Projeto Redes Sociais</h3>
-                            <p>Projeto construído para treinar responsividade e múltiplos media queries e para divulgar as minhas principais redes sociais.</p>
+                            <p class="periodo">Out/2025</p>
+                            <h3 class="titulo">Projeto Android</h3>
+                            <p>Projeto construído para treinar conteúdos e imagens dinâmicas.</p>
+                            <a href="https://luizgbritoe.github.io/projeto-android/">Clique aqui para acessar o projeto</a>
 
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
@@ -284,12 +271,13 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 4 -->
-                        <img src="imagens/projeto-05-login.jpg" alt="Projeto 4 - Login" class="foto">
+                        <img src="imagens/projeto-05-login.png" alt="Projeto 4 - Login" class="foto">
 
                         <div class="projeto-info">
                             <p class="periodo">Out/2025</p>
                             <h3 class="titulo">Projeto Login</h3>
                             <p>Projeto construído para treinar responsividade e formulários em uma das telas mais populares em sistemas.</p>
+                            <a href="https://luizgbritoe.github.io/projeto-login/">Clique aqui para acessar o projeto</a>
 
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
