--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     </div>
 
                     <div class="curso">
-                        <p class="periodo">Mai/2025 - Nov/2025 (Concluído)</p>
+                        <p class="periodo">Mai/2025 - Nov/2025 (Cursando)</p>
                         <h3 class="instituicao">Curso em Vídeo</h3>
                         <p class="titulacao">Curso de HTML5 e CSS3</p>
                     </div>
