adição de um novo projeto

--- a/index.html
+++ b/index.html
@@ -291,6 +291,22 @@
                             </details>
                         </div>
                     </div>
+
+                    <div class="projeto"> <!-- Projeto 5 -->
+                        <img src="imagens/barbearia-fortunacity.png" alt="Projeto 4 - Login" class="foto" id="foto-barbearia">
+
+                        <div class="projeto-info">
+                            <p class="periodo">Nov/2025</p>
+                            <h3 class="titulo">Barbearia FortunaCity</h3>
+                            <p>Projeto construído para treinar minhas habilidades em HTML e CSS após a conclusão do curso.</p>
+                            <a href="https://luizgbritoe.github.io/barbearia-fortunacity/">Clique aqui para acessar o projeto</a>
+
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi quae architecto a eaque rem porro id magnam iure sed totam dolore atque reiciendis, eum, voluptatum fugiat ipsum in ex provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia porro sunt odio accusamus. Sapiente illum quaerat, eos veniam non pariatur repellendus id sed in voluptatum consequuntur sit vero at atque!</p>
+                            </details>
+                        </div>
+                    </div>
                 </div>
             </article> <!-- Fim do artigo Projetos -->
         </section> <!-- Fim da seção Detalhes -->
