adição de um novo curso

--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
                         <h3 class="instituicao">Curso em Vídeo</h3>
                         <p class="titulacao">Curso de JavaScript e ECMAScript para Iniciantes</p>
                     </div>
+
+                    <div class="curso">
+                        <p class="periodo">Nov/2025 - Hoje em dia (Cursando)</p>
+                        <h3 class="instituicao">Tiago Matos</h3>
+                        <p class="titulacao">Curso de Tailwind CSS</p>
+                    </div>
                 </div>
             </article> <!-- Fim do artigo Formações -->
 
