adição do saiba mais nos projetos

--- a/index.html
+++ b/index.html
@@ -261,7 +261,11 @@
 
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi quae architecto a eaque rem porro id magnam iure sed totam dolore atque reiciendis, eum, voluptatum fugiat ipsum in ex provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia porro sunt odio accusamus. Sapiente illum quaerat, eos veniam non pariatur repellendus id sed in voluptatum consequuntur sit vero at atque!</p>
+                                <p>O Projeto Cordel foi desenvolvido com o objetivo de praticar o efeito Parallax em imagens, uma técnica muito utilizada para criar profundidade e movimento em páginas modernas. Ao combinar textos de cordel com imagens marcantes, o projeto cria uma experiência visual leve, fluida e imersiva.</p>
+                                <br>
+                                <p>Durante o desenvolvimento, trabalhei conceitos essenciais como posicionamento de fundo, comportamento de rolagem, sobreposição de camadas e contraste entre texto e imagem. Também explorei estilização tipográfica inspirada no estilo tradicional do cordel, valorizando a estética simples e expressiva desse formato literário tão característico da cultura brasileira.</p>
+                                <br>
+                                <p>O resultado é uma página dinâmica, visualmente marcante e rica em conteúdo, que une design moderno com a poesia do cordel. Esse projeto foi fundamental para aprimorar minhas habilidades em HTML, CSS e efeitos visuais que tornam interfaces mais envolventes e profissionais.</p>
                             </details>
                         </div>
                     </div>
@@ -277,7 +281,13 @@
 
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi quae architecto a eaque rem porro id magnam iure sed totam dolore atque reiciendis, eum, voluptatum fugiat ipsum in ex provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia porro sunt odio accusamus. Sapiente illum quaerat, eos veniam non pariatur repellendus id sed in voluptatum consequuntur sit vero at atque!</p>
+                                <p>O Projeto Android foi desenvolvido com o objetivo de praticar a construção de páginas ricas em conteúdo e com imagens dinâmicas, combinando organização textual, hierarquia visual e uso eficiente de elementos multimídia.</p>
+                                <br>
+                                <p>Durante o desenvolvimento, trabalhei a estruturação correta de seções, títulos e parágrafos, criando uma página informativa inspirada no estilo de portais de curiosidades e tecnologia. O projeto também envolveu o uso de imagens adaptáveis, personalização de cores e aplicação de pequenas interações visuais que deixam o conteúdo mais leve e interessante.</p>
+                                <br>
+                                <p>Além disso, explorei técnicas de estilização com CSS para melhorar a legibilidade, o contraste e o equilíbrio entre texto e imagens. O resultado é uma página limpa, divertida e funcional, que apresenta informações de forma clara e bem organizada.</p>
+                                <br>
+                                <p>Esse projeto foi importante para aprofundar meus conhecimentos em HTML5 e CSS3, reforçando práticas essenciais para criar páginas modernas, atrativas e adaptadas a diferentes dispositivos.</p>
                             </details>
                         </div>
                     </div>
@@ -293,7 +303,13 @@
 
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi quae architecto a eaque rem porro id magnam iure sed totam dolore atque reiciendis, eum, voluptatum fugiat ipsum in ex provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia porro sunt odio accusamus. Sapiente illum quaerat, eos veniam non pariatur repellendus id sed in voluptatum consequuntur sit vero at atque!</p>
+                                <p>O Projeto Login foi desenvolvido com o objetivo de treinar responsividade, estrutura de formulários e boas práticas de interface em uma das telas mais comuns e essenciais em qualquer sistema moderno: a tela de autenticação.</p>
+                                <br>
+                                <p>Durante o desenvolvimento, trabalhei com organização de layout utilizando HTML e CSS, explorando alinhamento, espaçamento e componentes reutilizáveis. Também pratiquei conceitos importantes de usabilidade, como campos bem identificados, botões destacados, hierarquia visual e contraste adequado.</p>
+                                <br>
+                                <p>Outro ponto importante foi a responsividade. O projeto foi estruturado para se adaptar a diferentes tamanhos de tela, garantindo que a experiência do usuário permaneça clara e funcional tanto em dispositivos móveis quanto em monitores maiores.</p>
+                                <br>
+                                <p>Este projeto representa uma etapa importante no meu aprendizado em desenvolvimento front-end, ajudando a consolidar fundamentos de formulários, estilização e design de interfaces essenciais para sistemas reais.</p>
                             </details>
                         </div>
                     </div>
@@ -309,7 +325,11 @@
 
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi quae architecto a eaque rem porro id magnam iure sed totam dolore atque reiciendis, eum, voluptatum fugiat ipsum in ex provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia porro sunt odio accusamus. Sapiente illum quaerat, eos veniam non pariatur repellendus id sed in voluptatum consequuntur sit vero at atque!</p>
+                                <p>A Barbearia FortunaCity é um projeto desenvolvido com o objetivo de colocar em prática os conhecimentos adquiridos em HTML e CSS após a conclusão do curso do Curso em Vídeo, ministrado pelo professor Gustavo Guanabara. Todo o site foi planejado para simular uma barbearia real, com foco em layout moderno, organização visual e navegação intuitiva.</p>
+                                <br>
+                                <p>Durante o desenvolvimento, trabalhei a estruturação correta do HTML, estilização com CSS responsivo e padronização de elementos como cores, tipografia e espaçamentos. As imagens utilizadas foram selecionadas a partir do aplicativo de agendamento da barbearia que inspirou o projeto, trazendo maior realismo à proposta visual.</p>
+                                <br>
+                                <p>Este projeto representa um importante passo no meu processo de aprendizado em desenvolvimento web, servindo como base para a consolidação de conceitos fundamentais de front-end e para a criação de projetos cada vez mais completos. Ele demonstra minha evolução técnica, atenção aos detalhes e preocupação com a experiência do usuário.</p>
                             </details>
                         </div>
                     </div>
